# catus

./: README.md
examples/001_hello_world/: main.ct
scripts/: cpp_sources.rb
src/: .clang-format  .clang-tidy  .formatconfig  CMakeLists.txt
src/cmake/: SetupGoogleTest.cmake
src/runtime/: CMakeLists.txt  exports.cpp  pch.hpp
src/runtime/fiber/: fiber.cpp  fiber.hpp  scheduler.hpp  thread.cpp  thread.hpp
src/runtime/memory/collector/: abstract_collector.hpp  collector.hpp  collector_gen_gc.cpp  collector_gen_gc.hpp  collector_no_gc.cpp  collector_no_gc.hpp
src/runtime/memory/managed_pointer/: abstract_managed_pointer.hpp  managed_pointer.hpp  managed_pointer_gen_gc.hpp  managed_pointer_no_gc.hpp
src/runtime/memory/types/: basics.hpp  types.hpp
src/tests/: CMakeLists.txt
